--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -18,5 +18,9 @@
   "item.label.Nydus": {
     "message": "Nydus",
     "description": "Navbar item with label Nydus"
+  },
+  "item.label.Videos": {
+    "message": "视频",
+    "description": "Navbar item with label Videos"
   }
 }
