feat: optimize session videos (#215)
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -19,8 +19,8 @@
     "message": "Nydus",
     "description": "Navbar item with label Nydus"
   },
-  "item.label.Videos": {
+  "item.label.Video": {
     "message": "视频",
-    "description": "Navbar item with label Videos"
+    "description": "Navbar item with label Video"
   }
 }
